fix: Mobile menu cutoff

--- a/src/components/mobile-menu-container/mobile-menu-container.module.css
+++ b/src/components/mobile-menu-container/mobile-menu-container.module.css
@@ -16,7 +16,7 @@
 	display: none;
 	flex-direction: column;
 	flex-shrink: 0;
-	height: calc(100vh - var(--sticky-bars-height));
+	height: calc(100% - var(--sticky-bars-height));
 	left: -150vw;
 	overflow-y: auto;
 	position: fixed;
